# rpi_project

./: README.md  bluetooth_connection.ino  gui.py  pyproject.toml  sensors.py  stylesheet.css  temperature_sensor.py
bluetooth_comunication/: platformio.ini
bluetooth_comunication/src/: main.cpp
