[tool.poetry]
name = "rpi-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rpi_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.4.0"
pyqt6-charts = "^6.4.0"
pyqtgraph = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
